<resources>
    <string name="app_name">Github</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="search">Cari user</string>
    <string name="search_hint">Cari user</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="content_tab_text">This is Tab %1$d</string>

    <string name="text_following">%1$s following</string>
    <string name="text_follower">%1$s follower</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_github_user">Detail Github User</string>
    <string name="nama_user">Nama User</string>
    <string name="username">username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="favorite">favorite</string>
</resources>